// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Choice screen test that image choice renders correctly 1`] = `
<div
  className="flexColumn"
>
  <h3>
    Select search objects
  </h3>
  <div
    className="flexColumn"
  >
    <div
      className="flexRow"
    >
      <div
        className="button"
        onClick={[Function]}
      >
        Upload an image
      </div>
      <div
        className="button"
        onClick={[Function]}
      >
        Take picture
      </div>
      <div
        className="button"
        onClick={[Function]}
      >
        Use image store
      </div>
    </div>
    <div
      className="button"
      onClick={[Function]}
    >
      Clear all images
    </div>
    <div
      className="imageContainer"
    />
  </div>
  <div
    className="button"
    onClick={[Function]}
  >
    Scene Selection
  </div>
</div>
`;

exports[`Image Choice screen test that imagecontainer renders correctly 1`] = `
<div
  className="flexColumn"
>
  <div
    className="flexRow"
  >
    <div
      className="button"
      onClick={[Function]}
    >
      Upload an image
    </div>
    <div
      className="button"
      onClick={[Function]}
    >
      Take picture
    </div>
    <div
      className="button"
      onClick={[Function]}
    >
      Use image store
    </div>
  </div>
  <div
    className="button"
    onClick={[Function]}
  >
    Clear all images
  </div>
  <div
    className="imageContainer"
  />
</div>
`;

exports[`Image Choice screen tests that cropping area renders correctly 1`] = `
<div
  className="flexColumn"
>
  <h3>
    Click twice to crop image:
  </h3>
  <canvas
    className="croppingCanvas"
    onClick={[Function]}
  />
  <div
    className="button"
    onClick={[Function]}
  >
    Take whole image
  </div>
  <div
    className="button"
    onClick={[Function]}
  >
    Take cropped image
  </div>
</div>
`;
